adsb-stack/tar1090/tar1090-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tar1090
  namespace: adsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tar1090
  template:
    metadata:
      labels:
        app: tar1090
    spec:
      containers:
      - name: tar1090
        image: ghcr.io/sdr-enthusiasts/docker-tar1090:latest-build-1331
        ports:
        - containerPort: 80
        volumeMounts:
        - name: runmem
          mountPath: /run
        - name: varlog
          mountPath: /var/log

      volumes:
      - name: runmem
        emptyDir:
          medium: Memory
      - name: varlog
        emptyDir:
          medium: Memory
