adsb-stack/tar1090/tar1090-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tar1090
  namespace: adsb
spec:
  selector:
    app: tar1090
  ports:
  - protocol: TCP
    port: 8078
    targetPort: 80
  type: NodePort
